# pseudospectral_PDE

./: .gitignore  CMakeLists.txt  README.md  compile.bash  compile_bc4.bash  compile_ubuntu.bash  conjplane.cpp  conjplane.hpp  fftw_mpi_3darray.cpp  fftw_mpi_3darray.hpp  globalparams.cpp  globalparams.hpp  griddata.cpp  griddata.hpp  input.cpp  input.hpp  integrator.cpp  integrator.hpp  iovtk.cpp  iovtk.hpp  main.cpp  randompll.cpp  randompll.hpp  run.cpp  run.hpp  smatrix.cpp  smatrix.hpp  solutionparams.cpp  solutionparams.hpp  timestep.cpp  timestep.hpp  writevtk.cpp  writevtk.hpp
examples/: heterogeneous.in  homogeneous.in  nucleationsites.nuc  read.in  restart.in
libps_pde/: CMakeLists.txt  atom.cpp  atom.hpp  chemical_potential_flory_huggins.cpp  chemical_potential_nucd.cpp  conjplane.cpp  conjplane.hpp  conjugate.cpp  conjugate.hpp  conjugate_trig.cpp  conjugate_trig.hpp  conjugate_volfrac.cpp  conjugate_volfrac.hpp  conjugate_volfrac_noise.cpp  conjugate_volfrac_noise.hpp  domain.cpp  domain.hpp  fftw_mpi_3darray.cpp  fftw_mpi_3darray.hpp  fixgrid_floryhuggins.cpp  fixgrid_floryhuggins.hpp  globalparams.cpp  globalparams.hpp  grid.cpp  grid.hpp  griddata.cpp  griddata.hpp  input.cpp  input.hpp  integrator.cpp  integrator.hpp  iovtk.cpp  iovtk.hpp  randompll.cpp  randompll.hpp  read_data.cpp  read_data.hpp  smatrix.cpp  smatrix.hpp  solutionparams.cpp  (+4 more)
ps_pde/: CMakeLists.txt  input.cpp  input.hpp  main.cpp  randompll.cpp  randompll.hpp  read_input.cpp  run.cpp  run.hpp
tests/conjugation/: compare.py  main.cpp
